// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorDefinitionCard renders without AD plugin 1`] = `
<div>
  <div
    class="euiText euiText--extraSmall"
    style="padding-bottom:0px;margin-bottom:0px"
  >
    <h4>
      Monitor defining method
    </h4>
  </div>
  <div
    class="euiText euiText--extraSmall"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      Specify the way you want to define your query and triggers. 
      <a
        class="euiLink euiLink--primary"
        href="https://opensearch.org/docs/monitoring-plugins/alerting/monitors/#create-monitors"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more
        <svg
          aria-hidden="true"
          aria-label="External link"
          class="euiIcon euiIcon--small euiIcon-isLoading euiLink__externalIcon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="euiScreenReaderOnly"
        >
          (opens in a new tab or window)
        </span>
      </a>
    </div>
  </div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding-top:0px;margin-top:0px"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="width:275px"
    >
      <div
        class="euiFormRow"
        id="searchTypeGraph-form-row-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
            >
              <div
                class="euiRadio euiRadio--noLabel"
                data-test-subj="visualEditorRadioCard"
              >
                <input
                  class="euiRadio__input"
                  id="visualEditorRadioCard"
                  name="searchTypeGraph"
                  type="radio"
                  value="graph"
                />
                <div
                  class="euiRadio__circle"
                />
              </div>
            </div>
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
            >
              <label
                class="euiCheckableCard__label"
                for="visualEditorRadioCard"
              >
                Visual editor
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="width:275px"
    >
      <div
        class="euiFormRow"
        id="searchTypeQuery-form-row-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
            >
              <div
                class="euiRadio euiRadio--noLabel"
                data-test-subj="extractionQueryEditorRadioCard"
              >
                <input
                  class="euiRadio__input"
                  id="extractionQueryEditorRadioCard"
                  name="searchTypeQuery"
                  type="radio"
                  value="query"
                />
                <div
                  class="euiRadio__circle"
                />
              </div>
            </div>
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
            >
              <label
                class="euiCheckableCard__label"
                for="extractionQueryEditorRadioCard"
              >
                Extraction query editor
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MonitorDefinitionCard renders without AD plugin 2`] = `
<div>
  <div
    class="euiText euiText--extraSmall"
    style="padding-bottom:0px;margin-bottom:0px"
  >
    <h4>
      Monitor defining method
    </h4>
  </div>
  <div
    class="euiText euiText--extraSmall"
  >
    <div
      class="euiTextColor euiTextColor--subdued"
    >
      Specify the way you want to define your query and triggers. 
      <a
        class="euiLink euiLink--primary"
        href="https://opensearch.org/docs/monitoring-plugins/alerting/monitors/#create-monitors"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more
        <svg
          aria-label="External link"
          class="euiIcon euiIcon--small euiLink__externalIcon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 8.5a.5.5 0 111 0V12a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h3.5a.5.5 0 010 1H4a1 1 0 00-1 1v8a1 1 0 001 1h8a1 1 0 001-1V8.5zm-5.12.339a.5.5 0 11-.706-.707L13.305 2H10.5a.5.5 0 110-1H14a1 1 0 011 1v3.5a.5.5 0 11-1 0V2.72L7.88 8.838z"
          />
        </svg>
        <span
          class="euiScreenReaderOnly"
        >
          (opens in a new tab or window)
        </span>
      </a>
    </div>
  </div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="padding-top:0px;margin-top:0px"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="width:275px"
    >
      <div
        class="euiFormRow"
        id="searchTypeGraph-form-row-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
            >
              <div
                class="euiRadio euiRadio--noLabel"
                data-test-subj="visualEditorRadioCard"
              >
                <input
                  class="euiRadio__input"
                  id="visualEditorRadioCard"
                  name="searchTypeGraph"
                  type="radio"
                  value="graph"
                />
                <div
                  class="euiRadio__circle"
                />
              </div>
            </div>
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
            >
              <label
                class="euiCheckableCard__label"
                for="visualEditorRadioCard"
              >
                Visual editor
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="width:275px"
    >
      <div
        class="euiFormRow"
        id="searchTypeQuery-form-row-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
            >
              <div
                class="euiRadio euiRadio--noLabel"
                data-test-subj="extractionQueryEditorRadioCard"
              >
                <input
                  class="euiRadio__input"
                  id="extractionQueryEditorRadioCard"
                  name="searchTypeQuery"
                  type="radio"
                  value="query"
                />
                <div
                  class="euiRadio__circle"
                />
              </div>
            </div>
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
            >
              <label
                class="euiCheckableCard__label"
                for="extractionQueryEditorRadioCard"
              >
                Extraction query editor
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
